gui/editor/AngleEditorDegs: Fix Java9+ deprecation for new Float.